Init swiper slides with index. Swiper code refactoring.

--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -1,6 +1,7 @@
 <div class="swiper-container" em-swiper>
 
   <div class="swiper-wrapper">
+    <div class="swiper-slide em-scrollable-middle" inbox></div>
     <div class="swiper-slide em-scrollable-top" my></div>
     <div class="swiper-slide em-scrollable-middle" tasks></div>
     <div class="swiper-slide em-scrollable-middle" today></div>
@@ -14,7 +15,7 @@
     <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
   </div>
 
-  <div ng-switch-when=0>
+  <div ng-switch-when=1>
     <div em-main-header></div>
     <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
   </div>
