Minified idangerous swiper.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "em-bootstrap-fixes.less";
 @import "carousel.less";
+@import "../lib/idangerous/idangerous.swiper.css";
 
 // GENERAL
 
