Added no swiping class into input text fields.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -4,7 +4,7 @@
     <h1 class="text-primary"><span>extended mind</span></h1>
   </div>
 
-  <div class="row em-omnibar" omni-bar></div>
+  <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
 
   <div class="row em-inbox" items-list itemsfilter="newItem.title">
     <a id="em-inboxlink" href ng-click="gotoInbox()">inbox</a>
