--- a/frontend/core/src/main/webapp/static/partials/my/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/my/inbox.html
@@ -1,19 +1,4 @@
-<div id="em-feature-header-tasks" class="row em-feature-header">
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <ul class="nav navbar-nav nav-justified">
-        <li id="em-iconlink">
-          <a href ng-click="gotoHome()"><span class="em-icon">i</span></a>
-        </li>
-        <li id="em-featurelink">
-          <a class="em-feature" href ng-click="prevSlide()">inbox</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
-
-<div class="row em-scrollable-bottom">
+<div class="row">
 
   <ul class="list-unstyled">
     <li ng-class="selected" ng-repeat="item in items">
