--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -1,4 +1,4 @@
-<form class="form" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
+<form class="form swiper-no-swiping" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
 
     <div class="form-group">
         <label class="sr-only" for="taskTitle">title</label>
