--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
 
-      <button id="em-triangle" type="button" class="em-simple-input" ng-click="collapseNavbar()">
+      <button id="em-triangle" type="button" class="em-simple-input navbar-right" ng-click="collapseNavbar()">
         &#x25B2;
       </button>
 
