--- a/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
@@ -1,4 +1,4 @@
-<div id="em-feature-header-tasks" class="row em-feature-header">
+<div id="em-feature-header" class="row em-feature-header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <ul class="nav navbar-nav nav-justified">
