--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -408,6 +408,28 @@ input ~ .fade {
  font-size: 26px !important;
 }
 
-#em-triangle{
+.em-box-shadow-menu {
+  position: relative;
+  padding-left: 1.25em;
+}
+.em-box-shadow-menu:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0.25em;
+  width: 1em;
+  height: 0.1em;
+  background: @em-lightblue;
+  box-shadow: 
+    0 0.25em 0 0 @em-lightblue,
+    0 0.5em 0 0 @em-lightblue;
+}
+
+#em-menu {
+  text-align: right;
+  padding-right: @em-page-padding * 2;
+}
+
+#em-menu-button{
   color: @em-lightblue !important;
 }
