--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -1,12 +1,16 @@
 <div id="em-feature-header-tasks" class="row em-feature-header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div id="em-menu" class="container">
+      <div class="row">
+        <button id="em-menu-button" 
+                type="button" 
+                class="em-simple-input" 
+                ng-click="collapseNavbar()">
+          <span class="em-box-shadow-menu"></span>
+        </button>
+      </div>
 
-      <button id="em-triangle" type="button" class="em-simple-input navbar-right" ng-click="collapseNavbar()">
-        &#x25B2;
-      </button>
-
-      <div class="row" ng-show="collapse">
+      <div class="row pull-right" ng-show="collapse">
         <ul>
           <li>
             <a href="#/my" ng-click="setActiveUuid(user)">home</a>
