Subtask directive with isolated scope. Fixed: 'Entering more than one task using add task... does not work: additional tasks aren't saved on the list'.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -27,7 +27,7 @@
       <div task></div>
 
     </li>
-    <div sub-task></div>
+    <div sub-task subtask="subtask"></div>
   </ul>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
