Filtered tasks list directive isolated scope.

--- a/frontend/core/src/main/webapp/static/partials/collective.html
+++ b/frontend/core/src/main/webapp/static/partials/collective.html
@@ -18,7 +18,7 @@
       <h2><a class="text-muted" href="#/my/notes">notes</a></h2>
     </div>
 
-    <div class="navbar-fixed-bottom pull-right" filtered-tasks-list tasksfilter="newItem.title">
+    <div class="navbar-fixed-bottom pull-right" filtered-tasks-list="tasks" tasksfilter="newItem.title">
       <h2><a class="text-muted" href="#/my/tasks">tasks</a></h2>
     </div>
   </div>
