--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,15 +1,14 @@
-@em-max-width: 480px;
-@em-font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-// padding: 0 15px; // http://getbootstrap.com/css/#grid
-@em-page-padding: 15px;
-@em-blue: #428bca;
+@font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+@page-padding: 15px;
+@active-color: #428bca;
+@inactive-color: #c6dcef; 
 @em-lightblue: #7aadd9;
-@em-blue-disabled: #c6dcef;
-@em-completed: #AFAFAF;
-@em-gray: #8E8E93;
-@em-darkgray: #B6BBBA;
-@em-red: #E22C09;
-@em-green: #4ECE3A;
-@em-black: #333;
-@em-fade-time: 0.1s;
+@blue-disabled: #c6dcef;
+@completed: #AFAFAF;
+@gray: #8E8E93;
+@darkgray: #B6BBBA;
+@red: #E22C09;
+@green: #4ECE3A;
+@black: #333;
+@fade-time: 0.1s;
 
