More work on LESS

--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -1,13 +1,6 @@
-// Start everything with normalize.css
-@import (less) "normalize.css";
-
-// iPad specifies the maximum width and height of the content area
-@maximum-width: 1024px;
-@maximum-height: 1024px;
-
 *{
   // Use the same font throughout
-  font-family: @em-font;
+  font-family: @font;
 
   // Use border box everywhere
   -moz-box-sizing: border-box; 
@@ -24,19 +17,13 @@ html {
   body, div[role=main], section.one-column-grid, section.two-columns-grid {
     height: inherit;
   }
-  div[role="main"] {
-    max-width: @maximum-width;
-    max-height: @maximum-height;
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 
 h1 {
-  
   font-weight: 100;
 }
 
 h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
+
