--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,4 +1,20 @@
+// Baseline
+@horizontal-grid: 30px;
+@vertical-grid: 44px;
+
+// Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+
+// Columns
+@single-column-width: 480px;
+@two-column-main-width: 66.66%;
+@two-column-aside-width: 33.33%;
+
+// iPad specifies the maximum width and height of the content area
+@maximum-width: 1024px;
+@maximum-height: 1024px;
+
+/*
 @page-padding: 15px;
 @active-color: #428bca;
 @inactive-color: #c6dcef; 
@@ -12,3 +28,4 @@
 @black: #333;
 @fade-time: 0.1s;
 
+*/
