--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -1,18 +1,43 @@
-@import "variables.less";
 
-// Set basic grid variables
-@horizontal-grid: 30px;
-@vertical-grid: 88px;
-
-
-
-
-// Everything 
-
-section.one-column-grid, section.two-columns-grid {
-  margin-left: 30px;
+div[role=main] {
+  line-height: @vertical-grid;
+  max-width: @maximum-width;
+  max-height: @maximum-height;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-aside.column, div.column {
-  margin-right: 30px;
+// We want to horzontally and vertically center everything
+// once the screen size is bigger than a tablet
+@media (min-width: @maximum-width) {
+  body {
+    .center-container;
+    div[role=main] {
+      .absolute-center;
+    }
+  }
 }
+
+.two-column-grid {
+  padding-left: @horizontal-grid;
+  aside.column, div.column {
+    padding-right: @horizontal-grid;
+  }
+  aside.column {
+    max-width: @two-column-aside-width;
+  }
+  div.column {
+    max-width: @two-column-main-width;
+  }
+}
+
+.one-column-grid {
+  .column {
+    padding-left: @horizontal-grid;
+    padding-right: @horizontal-grid;
+    max-width: @single-column-width;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
