--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -17,6 +17,7 @@ html {
   body, div[role=main], section.one-column-grid, section.two-columns-grid {
     height: inherit;
   }
+  font-size: @default-font-size;
 }
 
 h1 {
