--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -4,6 +4,7 @@
 
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+@default-font-size: 18px; 
 
 // Columns
 @single-column-width: 480px;
@@ -11,8 +12,10 @@
 @two-column-aside-width: 33.33%;
 
 // iPad specifies the maximum width and height of the content area
-@maximum-width: 1024px;
-@maximum-height: 1024px;
+@maximum-width: 1025px;
+@maximum-height: 1025px;
+@maximum-landscape-height: 769px;
+@fixed-page-height: 500px;
 
 /*
 @page-padding: 15px;
