--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -17,6 +17,14 @@
 @maximum-landscape-height: 769px;
 @fixed-page-height: 500px;
 
+// Colors
+
+@text-gray: #c9c9ce;
+@inactive-button: @text-gray;
+@active-button: #0f82fe;
+@pressed-button: #00baff;
+
+
 /*
 @page-padding: 15px;
 @active-color: #428bca;
