--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -1,4 +1,4 @@
-@login-content-height: @vertical-grid*4;
+@login-content-height: @vertical-grid*5.5;
 
 section#login {
   .banner {
@@ -8,6 +8,7 @@ section#login {
       margin-right: auto;
       display: block;
       padding-top: 10px;
+      width: 150px;
     }
     // Make content a "sticky footer"
     min-height: 100%;
@@ -20,6 +21,11 @@ section#login {
   }
   .content {
     height: @login-content-height;
+    .button-container{
+      padding-top: @vertical-grid;
+      padding-bottom: @vertical-grid / 2;
+      .normal-button;
+    }
   }
 }
 
