--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -17,9 +17,9 @@
           <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
           <label class="input-text checkbox" id="remember" for="remember">remember</label>
         </div>
-        <div class="form-group">
-          <button type="submit" class="simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
-            login
+        <div class="form-group button-container">
+          <button type="submit" id="login-button" class="wide-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+            <span class="button-text">login</span>
           </button>
         </div>
       </form>
