--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
@@ -1,14 +1,11 @@
 <div>
-  <div ng-transclude></div>
-
   <ul class="list-unstyled">
 
-    <li ng-class="selected" ng-repeat="task in tasks">
-      <div task></div>
-
+    <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:tasksFilter">
+      <div task="task"></div>
     </li>
 
-  </ul>
+    <div sub-task add="addSubtask(subtask)" subtask="subtask"></div>
 
-  <div sub-task subtask="subtask"></div>
+  </ul>
 </div>
