--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -7,6 +7,10 @@
   background: none;
 }
 
+input {
+  width: 100%;
+}
+
 // Placeholder colour 
 
 ::-webkit-input-placeholder { /* WebKit browsers */
@@ -21,7 +25,6 @@
 :-ms-input-placeholder { /* Internet Explorer 10+ */
     color:    @text-gray;
 }
-
 
 // Buttons
 
@@ -102,8 +105,8 @@ input[type=checkbox].input-checkbox:checked + .input-text {
 }
 
 .absolute-center {
-  width: 70%;
-  height: 70%;
+  width: 50%;
+  height: 50%;
   overflow: auto;
   margin: auto;
   position: absolute;
