--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -12,16 +12,20 @@
   </div>
 </div>
 
+<div class="em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
+
+
+
 <div ng-switch="slideIndex">
 
   <div ng-switch-default>
-    <div class="row em-feature-header" em-feature-header></div>
-    <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
+    <div class="em-feature-header" em-feature-header></div>
+    <div class="em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
   </div>
 
   <div ng-switch-when=1>
     <div em-main-header></div>
-    <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
+    <div class="em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
   </div>
 
 </div>
