--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,4 +1,4 @@
-<section id="login" class="one-column-grid fixed-height">
+<section id="login" class="one-column-grid fixed-height page">
   <div class="column">
     <div class="banner">
       <img src="static/img/em_logo_with_text.png" alt="extended mind"/>
