--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,25 +1,28 @@
-<div class="row">
-  <div class="row center-block em-logo-only">
-    <img class="center-block" src="static/img/em_logo.png"/>
-    <h1 class="text-primary"><span>extended mind</span></h1>
+<section id="my" class="one-column-grid fixed-height page">
+  <div class="column">
+    <div em-main-header class="main-header-container"></div>
+    <div class="main-content-container">
+      <div class="banner">
+        <img src="static/img/em_logo.png" alt="extended mind"/>
+      </div>
+
+      <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
+
+      <div class="row em-inbox" items-list itemsfilter="newItem.title">
+        <a id="em-inboxlink" href ng-click="gotoInbox()">inbox</a>
+        <span class="text-muted">{{items.length}}</span>
+        <span class="pull-right"><small>{{completed}}</small></span>
+      </div>
+
+      <div class="row em-filtered-items" ng-show="newItem.title" filtered-tasks-list="tasks" tasks-filter="newItem.title">
+        <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
+      </div>
+      
+      <div class="row em-filtered-items" filtered-tasks-list tasksfilter="newItem.title">
+        <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
+      </div>
+
+      <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+    <div/>
   </div>
-
-  <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
-
-  <div class="row em-inbox" items-list itemsfilter="newItem.title">
-    <a id="em-inboxlink" href ng-click="gotoInbox()">inbox</a>
-    <span class="text-muted">{{items.length}}</span>
-    <span class="pull-right"><small>{{completed}}</small></span>
-  </div>
-
-  <div class="row em-filtered-items" filtered-notes-list notesfilter="newItem.title">
-    <h3><a class="text-muted" href ng-click="gotoNotes()">notes</a></h3>
-  </div>
-
-  <div class="row em-filtered-items" ng-show="newItem.title" filtered-tasks-list="tasks" tasks-filter="newItem.title">
-    <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
-  </div>
-
-  <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-
-</div>
+</section>
