--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -23,6 +23,9 @@
 // Feature header
 @feature-header-height: 60px;
 
+// Footer
+@footer-heigth: 60px;
+
 // Colors
 @text-gray: #c9c9ce;
 @inactive-button: @text-gray;
