--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -8,17 +8,17 @@
 
       <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
 
-      <div class="row em-inbox" items-list itemsfilter="newItem.title">
-        <a id="em-inboxlink" href ng-click="gotoInbox()">inbox</a>
+      <div items-list itemsfilter="newItem.title">
+        <a id="inbox" href ng-click="gotoInbox()">inbox</a>
         <span class="text-muted">{{items.length}}</span>
         <span class="pull-right"><small>{{completed}}</small></span>
       </div>
 
-      <div class="row em-filtered-items" ng-show="newItem.title" filtered-tasks-list="tasks" tasks-filter="newItem.title">
-        <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
+      <div class="row em-filtered-items" filtered-notes-list notesfilter="newItem.title">
+        <h3><a class="text-muted" href ng-click="gotoNotes()">notes</a></h3>
       </div>
-      
-      <div class="row em-filtered-items" filtered-tasks-list tasksfilter="newItem.title">
+
+      <div class="row em-filtered-items" ng-show="newItem.title" filtered-tasks-list="tasks" tasks-filter="newItem.title">
         <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
       </div>
 
