--- a/frontend/core/src/main/webapp/static/partials/templates/footer.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/footer.html
@@ -1,35 +1,28 @@
-<nav class="navbar navbar-default navbar-fixed-bottom em-{{feature}}-footer" role="navigation">
-  <div class="container">
-
-    <div class="row em-mainlinks">
-      <ul class="nav navbar-nav nav-justified">
-
-        <li id="em-inboxlink" ng-hide="mainlinksFilter">
-          <a class="em-footer-feature" href ng-click="gotoInbox()">
-            <span id="em-letter-i" class="em-icon">i</span>
-          </a>
-        </li>
-        
-        <li id="em-homelink" ng-hide="mainlinksFilter">
-          <a class="em-footer-feature" href ng-click="gotoHome()">
-            <span id="em-letter-h" class="em-icon">h</span>
-          </a>
-        </li>
-        
-        <li id="em-taskslink" ng-hide="mainlinksFilter">
-          <a class="em-footer-feature" href ng-click="gotoTasks()">
-            <span class="em-icon">t</span>
-          </a>
-        </li>
-        
-        <li id="em-noteslink" ng-hide="mainlinksFilter">
-          <a href class="em-footer-feature-disabled">
-            <span id="em-letter-n" class="em-icon">n</span>
-          </a>
-        </li>
-
-      </ul>
-    </div>
-
-  </div>
+<nav id="footer" class="{{feature}}-footer" role="navigation">
+  <ul>
+    <li id="inbox-link" class="footer-link" ng-hide="mainlinksFilter">
+      <a href ng-click="gotoInbox()">
+        <span id="inbox-icon" class="icon">i</span>
+      </a>
+    </li>
+    
+    <li id="home-link" class="footer-link" ng-hide="mainlinksFilter">
+      <a href ng-click="gotoHome()">
+        <span id="home-icon" class="icon">h</span>
+      </a>
+    </li>
+    
+    <li id="tasks-link" class="footer-link" ng-hide="mainlinksFilter">
+      <a href ng-click="gotoTasks()">
+        <span id="tasks-icon" class="icon">t</span>
+      </a>
+    </li>
+    
+    <li id="notes-link" class="footer-link" ng-hide="mainlinksFilter">
+      <a class="disabled" href>
+        <span id="notes-icon" class="icon">n</span>
+      </a>
+    </li>
+    <li id="stretch"></li>
+  </ul>
 </nav>
