--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -99,6 +99,11 @@ ul {
   overflow-y: auto;
 }
 
+.em-scrollable-inner {
+  height: inherit;
+  padding-bottom: 2.5em;
+}
+
 // Pages with two sections
 .em-scrollable-top {
   height: inherit;
@@ -111,7 +116,7 @@ ul {
   padding-top: 2.5em;
 }
 
-.em-scrollable-top, .em-scrollable-bottom, .em-scrollable-middle {
+.em-scrollable-top, .em-scrollable-bottom, .em-scrollable-middle, .em-scrollable-inner {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch; // http://stackoverflow.com/a/9419027
 }
@@ -421,8 +426,8 @@ input ~ .fade {
   height: 0.1em;
   background: @em-lightblue;
   box-shadow: 
-    0 0.25em 0 0 @em-lightblue,
-    0 0.5em 0 0 @em-lightblue;
+  0 0.25em 0 0 @em-lightblue,
+  0 0.5em 0 0 @em-lightblue;
 }
 
 #em-menu {
