--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -1,4 +1,4 @@
-<div class="swiper-container" em-swiper>
+<div class="swiper-container" em-swiper-slider="horizontal">
   <div class="swiper-wrapper">
     <div class="swiper-slide em-scrollable-middle" inbox></div>
     <div class="swiper-slide em-scrollable-top" my></div>
