--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -126,7 +126,7 @@ input[type=checkbox].input-checkbox:checked + .input-text {
 
 .main-content-container { 
   padding-top:@main-header-height;
-  margin-bottom:@footer-heigth;
+  margin-bottom:@footer-height;
   overflow-y:auto;
   width: 100%;
 }
@@ -140,7 +140,7 @@ input[type=checkbox].input-checkbox:checked + .input-text {
 // FOOTER
 
 .footer-container {
-  height: @footer-heigth;
+  height: @footer-height;
   text-align: justify;
   -ms-text-justify: distribute-all-lines;
   text-justify: distribute-all-lines;
@@ -153,7 +153,7 @@ nav#footer {
   }
   li.footer-link {
     width: 30px;
-    height: @footer-heigth;
+    height: @footer-height;
     vertical-align: top;
     display: inline-block;
     *display: inline;
