--- a/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
+++ b/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
@@ -18,7 +18,8 @@ Basic Swiper Styles
 ================================================================*/
 .swiper-container {
 	margin:0 auto;
-	position:relative;
+	margin-bottom: @footer-height;
+	position:absolute;
 	overflow:hidden;
 	-webkit-backface-visibility:hidden;
 	-moz-backface-visibility:hidden;
